# kiro-intelligent-dev-assistant

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  GITHUB_SETUP_GUIDE.md  PROJECT_COMPLETION_SUMMARY.md  README.md  VERSIONED_STRUCTURE_README.md  ai_brain_coordinator_complete_coverage.json  ai_brain_coordinator_coverage.json  ai_brain_coordinator_current_coverage.json  ai_brain_coordinator_precise_coverage.json  analyze_ai_brain_coordinator_coverage.py  analyze_commander_engine_v2_final_coverage.py  analyze_missing_branches.py  check_accurate_coverage.py  check_ai_brain_coordinator_final_coverage.py  check_ai_brain_coverage.py  check_ai_brain_coverage_detailed.py  check_coverage.py  check_final_coverage.py  coverage.xml  debug_text_parsing.py  extract_missing_lines.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  setup_mac.sh  setup_windows.bat  sonar-project.properties  test_debug_smart_position.py  test_simple_ai_brain.py  test_simple_text_parsing.py
.kiro/: .config_lock
00_核心文档/: AI_THREE_BRAINS_TODO.md  ANTI_HALLUCINATION_GUIDE.md  API_REFERENCE_TEMPLATE.md  ARCHITECTURE_DECISIONS.md  CHAPTER_7_SECURITY_ARCHITECTURE.md  CODING_RULES_OPTIMIZATION.md  CODING_RULES_VALIDATION_REPORT.md  CODING_SYSTEM_SUMMARY.md  DEVELOPMENT_GUIDE.md  DOCUMENTATION_SUMMARY.md  HOW_TO_USE_CODING_RULES.md  IMPLEMENTATION_CHECKLIST.md  LLM_CODING_SYSTEM_SUMMARY.md  MIA_UI_UX_DESIGN_REQUIREMENTS.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  START_CODING.md  TESTING_STRATEGY.md  mia.md
config/: README.md  risk_control_config.yaml  risk_factor_mining.yaml
docker/: Dockerfile  docker-compose.yml  prometheus.yml
docs/: PRD.md  README.md  README_CN.md  README_EN.md  RELEASE_NOTES_V2.1.md
examples/: README.md  base_adapter_example.py  cache_manager_example.py  complete_data_flow_example.py  data_probe_example.py  risk_factor_mining_example.py
monitoring/: README.md  alert_rules.yml  grafana_dashboard.json  prometheus.yml
reports/: ai_brain_coordinator_coverage_milestone_20260202.md  ai_brain_coordinator_final_summary_20260202.md  ai_brain_coordinator_test_coverage_report.md  bug_fix_summary_20260131.md  commander_engine_v2_test_coverage_report.md  coverage_analysis_20260201_131115.json  coverage_analysis_comprehensive_20260201.md  coverage_improvement_plan.md  debug_360_20260201_194825.json  debug_360_20260201_194825.md  debug_360_20260201_213353.json  debug_360_20260201_213353.md  debug_360_20260201_213616.json  debug_360_20260201_213616.md  debug_360_20260202_015618.json  debug_360_20260202_015618.md  debug_360_20260202_111830.json  debug_360_20260202_111830.md  debug_360_system_summary.md  deploy_test_20260202_184003.json  end_to_end_test_report.md  git_deployment_mac_adaptation_final_report.md  git_repository_structure_verification_20260202.md  global_config_optimization_report_20260201.md  hook_system_validation_report.md  hook_test_rules_verification.md  immediate_action_plan_20260201.md  kiro_config_comprehensive_audit_report_20260202.md  kiro_config_optimization_final_summary.md  kiro_config_optimization_report.md  kiro_config_system_completion_report_20260202.md  kiro_mac_adaptation_final_report.md  kiro_mac_adaptation_report.json  llm_anti_drift_system_deployment_complete.md  (+21 more)
src/: __init__.py  (+1 more)
(+2101 files in other folders)
